src/OpenCvSharpExtern/calib3d.h

CVAPI(ExceptionStatus) calib3d_estimateAffinePartial2D(
    cv::_InputArray *from, cv::_InputArray *to, cv::_OutputArray *inliers,
    int method, double ransacReprojThreshold,
    uint64_t maxIters, double confidence, uint64_t refineIters,
    cv::Mat **returnValue)
{
    BEGIN_WRAP
    const auto result = cv::estimateAffinePartial2D(
        *from, *to, entity(inliers), method, ransacReprojThreshold, static_cast<size_t>(maxIters), confidence, static_cast<size_t>(refineIters));
    *returnValue = new cv::Mat(result);
    END_WRAP
}
CVAPI(ExceptionStatus) calib3d_decomposeHomographyMat(
    cv::_InputArray *H,
    cv::_InputArray *K,
    std::vector<cv::Mat> *rotations,
    std::vector<cv::Mat> *translations,
    std::vector<cv::Mat> *normals,
    int *returnValue)
{
    BEGIN_WRAP
    *returnValue = cv::decomposeHomographyMat(*H, *K, *rotations, *translations, *normals);
    END_WRAP
}
CVAPI(ExceptionStatus) calib3d_filterHomographyDecompByVisibleRefpoints(
    std::vector<cv::Mat> *rotations,
    std::vector<cv::Mat> *normals,
    cv::_InputArray *beforePoints,
    cv::_InputArray *afterPoints,
    cv::_OutputArray *possibleSolutions,
    cv::_InputArray *pointsMask)
{
    BEGIN_WRAP
    cv::filterHomographyDecompByVisibleRefpoints(*rotations, *normals, *beforePoints, *afterPoints, *possibleSolutions, entity(pointsMask));
    END_WRAP
}
CVAPI(ExceptionStatus) calib3d_undistort(
    cv::_InputArray *src, cv::_OutputArray *dst,
    cv::_InputArray *cameraMatrix, cv::_InputArray *distCoeffs, cv::_InputArray *newCameraMatrix)
{
    BEGIN_WRAP
    cv::undistort(*src, *dst, *cameraMatrix, entity(distCoeffs), entity(newCameraMatrix));
    END_WRAP
}
CVAPI(ExceptionStatus) calib3d_initUndistortRectifyMap(
    cv::_InputArray *cameraMatrix, cv::_InputArray *distCoeffs,
    cv::_InputArray *R, cv::_InputArray *newCameraMatrix,
    MyCvSize size, int m1type, cv::_OutputArray *map1, cv::_OutputArray *map2)
{
    BEGIN_WRAP
    cv::initUndistortRectifyMap(*cameraMatrix, *distCoeffs, *R, *newCameraMatrix, cpp(size), m1type, *map1, *map2);
    END_WRAP
}
CVAPI(ExceptionStatus) calib3d_initWideAngleProjMap(
    cv::_InputArray *cameraMatrix, cv::_InputArray *distCoeffs,
    MyCvSize imageSize, int destImageWidth,
    int m1type, cv::_OutputArray *map1, cv::_OutputArray *map2,
    int projType, double alpha,
    float *returnValue)
{
    BEGIN_WRAP
    *returnValue = cv::initWideAngleProjMap(*cameraMatrix, *distCoeffs, cpp(imageSize), destImageWidth, m1type, 
        *map1, *map2, static_cast<cv::UndistortTypes>(projType), alpha);
    END_WRAP
}
CVAPI(ExceptionStatus) calib3d_getDefaultNewCameraMatrix(
    cv::_InputArray *cameraMatrix, MyCvSize imgsize, int centerPrincipalPoint,
    cv::Mat **returnValue)
{
    BEGIN_WRAP
    const auto result = cv::getDefaultNewCameraMatrix(*cameraMatrix, cpp(imgsize), centerPrincipalPoint != 0);
    *returnValue = new cv::Mat(result);
    END_WRAP
}
CVAPI(ExceptionStatus) calib3d_undistortPoints(
    cv::_InputArray *src, cv::_OutputArray *dst,
    cv::_InputArray *cameraMatrix, cv::_InputArray *distCoeffs,
    cv::_InputArray *R, cv::_InputArray *P)
{
    BEGIN_WRAP
    cv::undistortPoints(*src, *dst, *cameraMatrix, *distCoeffs, entity(R), entity(P));
    END_WRAP
}
CVAPI(ExceptionStatus) calib3d_undistortPointsIter(
    cv::_InputArray *src, cv::_OutputArray *dst,
    cv::_InputArray *cameraMatrix, cv::_InputArray *distCoeffs,
    cv::_InputArray *R, cv::_InputArray *P, MyCvTermCriteria criteria)
{
    BEGIN_WRAP
    cv::undistortPoints(*src, *dst, *cameraMatrix, *distCoeffs, entity(R), entity(P), cpp(criteria));
    END_WRAP
}
CVAPI(ExceptionStatus) calib3d_recoverPose_InputArray1(
    cv::_InputArray *E, cv::_InputArray *points1, cv::_InputArray *points2,
    cv::_InputArray *cameraMatrix,
    cv::_OutputArray *R, cv::_OutputArray *t, cv::_InputOutputArray *mask,
    int *returnValue)
{
    BEGIN_WRAP
    *returnValue = cv::recoverPose(*E, *points1, *points2, *cameraMatrix, *R, *t, entity(mask));
    END_WRAP
}
CVAPI(ExceptionStatus) calib3d_recoverPose_InputArray2(
    cv::_InputArray *E, cv::_InputArray *points1, cv::_InputArray *points2,
    cv::_OutputArray *R, cv::_OutputArray *t, double focal, MyCvPoint2D64f pp,
    cv::_InputOutputArray *mask,
    int *returnValue)
{
    BEGIN_WRAP
    *returnValue = cv::recoverPose(*E, *points1, *points2, *R, *t, focal, cpp(pp), entity(mask));
    END_WRAP
}
CVAPI(ExceptionStatus) calib3d_recoverPose_InputArray3(
    cv::_InputArray *E, cv::_InputArray *points1, cv::_InputArray *points2,
    cv::_InputArray *cameraMatrix,
    cv::_OutputArray *R, cv::_OutputArray *t, double distanceTresh,
    cv::_InputOutputArray *mask, cv::_OutputArray *triangulatedPoints,
    int *returnValue)
{
    BEGIN_WRAP
    *returnValue = cv::recoverPose(*E, *points1, *points2, *cameraMatrix, *R, *t, distanceTresh, entity(mask), entity(triangulatedPoints));
    END_WRAP
}
CVAPI(ExceptionStatus) calib3d_findEssentialMat_InputArray1(
    cv::_InputArray *points1, cv::_InputArray *points2, cv::_InputArray *cameraMatrix,
    int method, double prob, double threshold,
    cv::_OutputArray *mask,
    cv::Mat **returnValue)
{
    BEGIN_WRAP
    const auto mat = cv::findEssentialMat(
        *points1, *points2, *cameraMatrix, method, prob, threshold, 1000, entity(mask));
    *returnValue = new cv::Mat(mat);
    END_WRAP
}
CVAPI(ExceptionStatus) calib3d_findEssentialMat_InputArray2(
    cv::_InputArray *points1, cv::_InputArray *points2, double focal, MyCvPoint2D64f pp,
    int method, double prob, double threshold,
    cv::_OutputArray *mask,
    cv::Mat **returnValue)
{
    BEGIN_WRAP
    const auto mat = cv::findEssentialMat(
        *points1, *points2, focal, cpp(pp), method, prob, threshold, 1000, entity(mask));
    *returnValue = new cv::Mat(mat);
    END_WRAP
}