src/OpenCvSharp/PInvoke/calib3d/NativeMethods_calib3d.cs


        [DllImport(DllExtern, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern IntPtr calib3d_estimateAffinePartial2D(
            IntPtr from, IntPtr to, IntPtr inliers,
            int method, double ransacReprojThreshold,
            ulong maxIters, double confidence, ulong refineIters);

        [DllImport(DllExtern, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern int calib3d_decomposeHomographyMat(
            IntPtr H,
            IntPtr K,
            IntPtr rotations,
            IntPtr translations,
            IntPtr normals);

        [DllImport(DllExtern, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void calib3d_filterHomographyDecompByVisibleRefpoints(
            IntPtr rotations,
            IntPtr normals,
            IntPtr beforePoints,
            IntPtr afterPoints,
            IntPtr possibleSolutions,
            IntPtr pointsMask);

        [DllImport(DllExtern, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void calib3d_undistort(
            IntPtr src, IntPtr dst,
            IntPtr cameraMatrix, IntPtr distCoeffs, IntPtr newCameraMatrix);

        [DllImport(DllExtern, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void calib3d_initUndistortRectifyMap(
            IntPtr cameraMatrix, IntPtr distCoeffs,
            IntPtr R, IntPtr newCameraMatrix,
            Size size, int m1type, IntPtr map1, IntPtr map2);

        [DllImport(DllExtern, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern float calib3d_initWideAngleProjMap(
            IntPtr cameraMatrix, IntPtr distCoeffs,
            Size imageSize, int destImageWidth,
            int m1type, IntPtr map1, IntPtr map2,
            int projType, double alpha);

        [DllImport(DllExtern, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern IntPtr calib3d_getDefaultNewCameraMatrix(
            IntPtr cameraMatrix, Size imgsize, int centerPrincipalPoint);

        [DllImport(DllExtern, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void calib3d_undistortPoints(
            IntPtr src, IntPtr dst,
            IntPtr cameraMatrix, IntPtr distCoeffs,
            IntPtr R, IntPtr P);

        [DllImport(DllExtern, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void calib3d_undistortPointsIter(
            IntPtr src, IntPtr dst,
            IntPtr cameraMatrix, IntPtr distCoeffs,
            IntPtr R, IntPtr P, TermCriteria criteria);

        [DllImport(DllExtern, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern int calib3d_recoverPose_InputArray1(
            IntPtr E, IntPtr points1, IntPtr points2,
            IntPtr cameraMatrix, 
            IntPtr R, IntPtr P, IntPtr mask);
        [DllImport(DllExtern, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern int calib3d_recoverPose_InputArray2(
            IntPtr E, IntPtr points1, IntPtr points2,
            IntPtr R, IntPtr P, double focal, IntPtr pp, IntPtr mask);
        [DllImport(DllExtern, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern int calib3d_recoverPose_InputArray3(
            IntPtr E, IntPtr points1, IntPtr points2,
            IntPtr cameraMatrix,
            IntPtr R, IntPtr P, double distanceTresh, IntPtr mask, IntPtr triangulatedPoints);

        [DllImport(DllExtern, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern IntPtr calib3d_findEssentialMat_InputArray1(
            IntPtr points1, IntPtr points2,
            IntPtr cameraMatrix,
            int method, double prob, double threshold, IntPtr mask);
        [DllImport(DllExtern, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern IntPtr calib3d_findEssentialMat_InputArray2(
            IntPtr points1, IntPtr points2,
            double focal, IntPtr pp,
            int method, double prob, double threshold, IntPtr mask);
    }
}